--- a/CProject/CProject.vcxproj.filters
+++ b/CProject/CProject.vcxproj.filters
@@ -20,10 +20,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="(2023.04.12)Variable.h">
+    <ClInclude Include="%282023.04.12%29변수.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="%282023.04.13%29bit.h">
+    <ClInclude Include="%282023.04.13%29비트.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="(2023.04.14)조건문.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
