--- a/CProject/CProject.vcxproj.filters
+++ b/CProject/CProject.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="(2023.04.14)조건문.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="(2023.04.17)반복문.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
