--- a/CProject/CProject.vcxproj
+++ b/CProject/CProject.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="%282023.04.13%29비트.h" />
     <ClInclude Include="(2023.04.14)조건문.h" />
     <ClInclude Include="(2023.04.17)반복문.h" />
+    <ClInclude Include="(2023.04.18)포인터.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
