--- a/CProject/CProject.vcxproj
+++ b/CProject/CProject.vcxproj
@@ -147,6 +147,8 @@
     <ClInclude Include="(2023.04.14)조건문.h" />
     <ClInclude Include="(2023.04.17)반복문.h" />
     <ClInclude Include="(2023.04.18)포인터.h" />
+    <ClInclude Include="%282023.04.19%29포인터의 상수화.h" />
+    <ClInclude Include="(2023.04.20)배열.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
