--- a/CProject/CProject.vcxproj.filters
+++ b/CProject/CProject.vcxproj.filters
@@ -41,5 +41,14 @@
     <ClInclude Include="(2023.04.20)배열.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="(2023.04.21)문자열.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="(2023.04.24)함수.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
