--- a/CProject/CProject.vcxproj
+++ b/CProject/CProject.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="(2023.04.20)배열.h" />
     <ClInclude Include="(2023.04.21)문자열.h" />
     <ClInclude Include="(2023.04.24)함수.h" />
+    <ClInclude Include="(2023.04.25)재귀함수.h" />
     <ClInclude Include="SoundManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
