--- a/CProject/CProject.vcxproj.filters
+++ b/CProject/CProject.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="SoundManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="(2023.04.25)재귀함수.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
