--- a/CProject/CProject.vcxproj.filters
+++ b/CProject/CProject.vcxproj.filters
@@ -53,5 +53,13 @@
     <ClInclude Include="(2023.04.25)재귀함수.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="(2023.04.26)변수의 범위.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="%282023.04.27%29동적할당.h">
+      <Filter>헤더 파일</Filter>
+    </None>
   </ItemGroup>
 </Project>
